# YT-DLP-GUI

./: .gitignore  README.md  app.py  build.gradle.kts  index.html  package-lock.json  package.json  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: release.yml
native/: README.md
native/macos/YtDlpNativeMac/: Package.swift
native/macos/YtDlpNativeMac/Sources/YtDlpNativeMac/: MainView.swift  MainViewModel.swift  Models.swift  YtDlpNativeMacApp.swift  YtDlpService.swift
native/shared/: BackendContract.md
native/windows/: YtDlpGui.Wpf.sln
native/windows/YtDlpGui.Wpf/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  YtDlpGui.Wpf.csproj
native/windows/YtDlpGui.Wpf/Models/: DownloadJob.cs
native/windows/YtDlpGui.Wpf/Services/: YtDlpService.cs
scripts/: setup-deps.mjs
src/: App.axaml  App.axaml.cs  App.tsx  MainViewModel.cs  MainWindow.axaml  MainWindow.axaml.cs  Models.cs  Program.cs  YtDlpGui.csproj  YtDlpService.cs  commands.ts  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs
src/main/kotlin/com/ytdlpgui/: Main.kt
src/main/kotlin/com/ytdlpgui/model/: Models.kt
src/main/kotlin/com/ytdlpgui/service/: DownloadManager.kt  YtDlpService.kt
src/main/kotlin/com/ytdlpgui/theme/: Theme.kt
src/main/kotlin/com/ytdlpgui/ui/: App.kt  Components.kt  DownloadScreen.kt
