[package]
name = "yt-dlp-gui"
version = "1.0.0"
description = "A modern cross-platform yt-dlp GUI"
authors = ["you"]
edition = "2021"

[lib]
name = "yt_dlp_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "5"
